Fixed TeaVM issues